# InSituML

./: .flake8  .gitignore  .gitmodules  .pep8  README.md  Untitled.ipynb  conftest.py  ddp_torch2_toy.py  extract_radiation.ipynb  pyproject.toml  requirements.txt  requirements_cINN.txt  requirements_hemera.txt  requirements_jureca.txt  run_cinn.sbatch  run_cinn.sh  run_cinn_juwelsbooster.sbatch  setup.py  stream_readme.md  train_cINN.py
.github/workflows/: python-app.yml
examples/: LWFA_particle_data.ipynb  LWFA_radiation_data.ipynb  README.md  Supercell_vis.ipynb  extract_particles.ipynb  extract_radiation.ipynb  find_supercells.py  find_supercells_magnRec.py  save_supercells.py  save_supercells_each.py  save_supercells_for_10_nbrs.py  save_supercells_ngbs.py  save_supercells_ngbs_contsave.py  train_model.ipynb
examples/particles/: Toy8-INN2018.ipynb  Toy8-cINN-ContinualLearning.ipynb  distributed_toy8_inn2019.py  toy8.py  train_cINN_distributed_toy8.py
examples/streaming_toy_data/: README.md  Toy8-cINN.ipynb  data_gen.py  data_vis.py  run_benchmarks.sh  scaling_benchmark.py  sim_train_loop.py  simple_train.py  test_data_gen.py  toy8.py  toy_cl.py  train_and_plot.py
main/: Application.py  Configure.py  ModelEvaluator.py  ModelTrainer.py  ModelTrainerOffline.py  ModelTrainerTaskWise.py  ModelsEnum.py  ReplayTrainer.py  main.py  trainer.py
main/Data/: data_100.npy
main/ModelHelpers/: AutoEncoder2D.py  Autoencoder3D.py  ContinualLearner.py  DimensionAutoEncoderModel.py  DimensionAutoEncoderModelWithPool.py  MeshDimensionDataset.py  ModelOperationHelper.py  mlp.py
main/StreamDataReader/: StreamBuffer.py  async_stream_buffer.py  stream_config.json  stream_reader.py
main/toy_data/: generate.py  test_generate.py
main/utils/: EpisodicMemory.py  cifar100_coarse.py  dataset_utils.py  dist_utils.py  plot_helper.py
model/: model_cINN.py
notebooks/: batchSizes.ipynb  evalUsingStreamingLoader.ipynb  plot_physicsResults.ipynb
picongpu_setup_KHI/: insituml_picongpu.profile  submit_scaling.sh
scripts/: create_metrics.sh  hemera_CUDA_VISIBLE_DEVICES_wrapper.sh  hemera_run.sh  job_hemera.sh  job_jureca.sh  job_jureca_scan.sh  ompi_CUDA_VISIBLE_DEVICES_wrapper.sh  opt_jureca.sh
tests/: test_toy_generate.py  test_utils.py
tools/: calculate_metrics.py  io_config.py  io_config_hemera.py  model_config.py  openpmd-streaming-continual-learning.py
(+268 files in other folders)
