[project]

name = "insituml"
version = "0.0.0"

dependencies = [
    # Install torch manually, don't let package manager pull that. Example for
    # local CPU-only install:
    #   pip install torch --extra-index-url https://download.pytorch.org/whl/cpu
    ##"torch",

    # For examples/ data loading notebooks
    "openpmd-api",
    "h5py",

    # Mostly for examples/ notebooks
    "numpy",
    "matplotlib",

    # cINN library
    "FrEIA",

    # Monitoring, set WANDB_MODE=disabled if needed.
    # See https://github.com/Photon-AI-Research/InSituML/issues/4
    "wandb",
]


[project.optional-dependencies]

# pip install project_name[test]
test = ["pytest"]

# Default.
##[tool.setuptools.packages.find]
##where = ["src"]

[build-system]
requires = ["setuptools>=66.1", "wheel"]
build-backend = "setuptools.build_meta"
